fix overflow issues

--- a/src/styles/_game.scss
+++ b/src/styles/_game.scss
@@ -71,7 +71,7 @@
         grid-area: center;
         display: grid;
         grid-column: 2;
-
+        min-height: 0;
         .p-combat {
             display: grid;
             grid-template-rows: 1fr 1fr;
@@ -87,7 +87,7 @@
         .p-skills {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 0.74fr;
+            grid-template-rows: 1fr 0.5fr;
             min-height: 0;
             flex: 1;
             .s-skill-slots {
@@ -161,6 +161,8 @@
                 grid-column: 1/3;
                 border-top: 1px solid $color-border-highlight;
                 padding-top: $padding-container;
+                min-height: 0;
+                overflow-y: auto;
                 ul {
                     min-height: 0;
                 }
@@ -168,6 +170,9 @@
         }
 
         .p-passives {
+            display: grid;
+            grid-template-rows: auto 1fr;
+            min-height: 0;
             header {
                 display: flex;
                 align-items: center;
@@ -175,28 +180,31 @@
                 padding-bottom: $padding-container;
                 border-bottom: 1px solid $color-border-highlight;
             }
-            table {
-                margin-top: $padding-container;
-                tr.selected {
-                    pointer-events: all;
-                    &:hover {
-                        background-color: $color-action-list-item-default-selected-bg;
+            .s-passive-list{
+                overflow-y: auto;
+                table {
+                    margin-top: $padding-container;
+                    tr.selected {
+                        pointer-events: all;
+                        &:hover {
+                            background-color: $color-action-list-item-default-selected-bg;
+                        }
                     }
-                }
-                td:first-child {
-                    width: 100%;
-                }
-                th,
-                td {
-                    padding: $padding-list-item;
-                }
-
-                td:first-child {
-                    text-align: left;
-                }
-                td:last-child {
-                    text-align: right;
-                    white-space: nowrap;
+                    td:first-child {
+                        width: 100%;
+                    }
+                    th,
+                    td {
+                        padding: $padding-list-item;
+                    }
+    
+                    td:first-child {
+                        text-align: left;
+                    }
+                    td:last-child {
+                        text-align: right;
+                        white-space: nowrap;
+                    }
                 }
             }
         }
@@ -261,10 +269,17 @@
             }
 
             .s-preset-container {
+                display: grid;
+                grid-template-rows: auto 1fr;
                 border-right: 1px solid $color-border-highlight;
                 padding-right: $padding-container;
                 border-top: 1px solid $color-canvas-default;
                 padding-top: $padding-container;
+        
+                [data-preset-list]{
+                    min-height: 0;
+                    overflow-y: auto;
+                }
             }
 
             [data-preset-modal] {
@@ -313,10 +328,11 @@
         }
 
         .p-missions {
+            min-height: 0;
             ul {
-                display: flex;
-                flex-direction: column;
                 flex-wrap: wrap;
+                height: 100%;
+                overflow-y: auto;
                 li {
                     flex: 1;
                     padding: $padding-container;
