--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -19,7 +19,7 @@ body {
     max-height: 100vh;
     margin: 0;
     padding: 0;
-    font-size: min(1em, 1.7vw);
+    font-size: min(1em, 1.4vw);
     background-color: $color-canvas-default;
     color: $color-fg-default;
     margin: 0 auto;
